# open-browser-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SKILL.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: browser-cli.rb
bucket/: browser-cli.json
extension/: build.js  manifest.json  pack.js  package-lock.json  package.json  tsconfig.json
extension/src/background/: service-worker.ts
extension/src/content/: content-script.ts
extension/src/shared/: types.ts
src/: main.rs
src/cli/: commands.rs  output.rs
src/page/: mod.rs  structure.rs  xml.rs
src/plugin/: loader.rs  runner.rs
src/protocol/: messages.rs
src/relay/: mod.rs  native_msg.rs  server.rs
src/transport/: client.rs
