[package]
name = "browser-cli"
version = "0.1.0"
edition = "2024"
description = "Browser session CLI with Native Messaging relay"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-util", "io-std", "sync", "time"] }
regex = "1.11"
toml = "0.9"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
